--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 html{
     background-color: #00539f;
     font-size: 10px;
-    font-family: 'Open sans',sans-serif;
+    font-family: 'Open Sans',sans-serif;
 }
 p{
     color: black;
