--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,66 @@
 html{
-    background-color: #00539f;
-    font-size: 10px;
-    font-family: 'Open Sans',sans-serif;
-}
-p{
-    color: black;
-    width: 500px;
     
 }
 
 body{
+   
+    margin: 0;
+    padding: 0;
+}
+
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 20px;
+    overflow: hidden;
+    background-color: #898989;
+}
+
+li{
+    display: inline;
+    margin: 100px;
+}
+
+a{
+    color: aliceblue;
+    font-family: 'Pacifico', cursive;
+    font-size: 20px;
+}
+
+.background{
+    background-image: url('../images/bg-image.jpg');
+    background-color: #cccccc;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
-    width: 600px;
-    margin: 0 auto;
-    background-color: #FF9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
 }
 
 h1{
-    font-size: 60px;
-    margin: 0;
-    padding: 20px 0;
-    color: #00539f;
-    text-align: center;
-    text-shadow:3px 3px 1px black;
-
+    padding: 30px;
 }
-
-p,li{
-    font-size: 16px;
-    line-height: 2;
-    letter-spacing: 1px;
-
-
-}
-
-img{
+/*
+h1{
+    font:  'Pacifico', cursive;
+    position: absolute;
+    top: 28%;
+    left: 28%;
+    font-size: 100px;
+    color: white;
     
-    display: block;
-    margin: 0 auto;
+}*/
 
+.title-shop{
+    font:  'Pacifico', cursive;
+    position: absolute;
+    /*top: 28%;
+    left: 28%;*/
+    font-size: 20px;
+    color: white;
+}
+
+th,tr{
+    padding: 20px;
+    text-align: center;
 }
